# auto-dev-test-target-2-python

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
comms/state/: version-state.json
comms/state/explorations/: design-v001-001-environment-1770386308864.json  design-v001-002-backlog-1770386533656.json  design-v001-003-research-1770386764196.json  design-v001-004-logical-design-1770387056061.json  design-v001-005-critical-thinking-1770387344857.json  design-v001-006-drafts-1770387681904.json  design-v001-007-persist-1770388117961.json  design-v001-008-validation-1770388547014.json  design-version-orchestrator-1770386197918.json  project-plan-and-backlog-1770380128992.json  v001-retro-001-environment-1770403835686.json  v001-retro-002-documentation-1770404051222.json  v001-retro-003-backlog-1770404247615.json  v001-retro-004-quality-1770404472513.json  v001-retro-005-architecture-1770404636538.json  v001-retro-006-learnings-1770404656442.json  v001-retro-007-proposals-1770404987977.json  v001-retro-008-closure-1770405363123.json  v001-retro-010-finalization-1770405559825.json  v001-retro-remediation-1770405165294.json  v001-retrospective-1770403746673.json
docs/: CHANGELOG.md
docs/auto-dev/: BACKLOG.md  LEARNINGS.md  PLAN.md  README.md  ROADMAP.md  STANDARDS.md  SYNC.md  backlog.json
src/test_target_2/: __init__.py  collection_utils.py  constants.py  hello.py  math_utils.py  string_utils.py
tests/: test_collection_utils.py  test_constants.py  test_hello.py  test_math_utils.py  test_string_utils.py
(+156 files in other folders)
